# alpha_verification_bot

./: .env.example  .gitignore  README.md  config.py  main.py  project-notif.py  pyproject.toml
bot/utils/: updater.py
database/: db.py  queries.py
integrations/: microsoft.py  sms.py
queue/: queue.py
